--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ python:
   - "3.3"
   - "3.2"
   - "2.7"
+  - "pypy"
 install:
   - pip install -e . --use-mirrors
   - pip install pep8 --use-mirrors
