--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,6 @@
 language: python
 python:
-  - "3.3"
-  - "3.2"
+  - "3.4"
   - "2.7"
   - "pypy"
 install:
@@ -10,7 +9,7 @@ install:
   - pip install pep8 --use-mirrors
   - pip install nose --use-mirrors
 script:
-  - pep8 --repeat --show-source --exclude=.venv,.tox,dist,doc,build,*.egg .
+  - pep8 --repeat --show-source --exclude=.venv,.tox,dist,doc,build,*.egg,*yml .
   - nosetests
 services:
   - redis-server
